--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
   <script>
     var game = {
       pixel: 40,
-      speed: 1000,
+      speed: 500,
+      looping: () => {},
       score: {
         current: 0,
         high: 0,
